diesel_compile_tests/tests/fail/eq_any_is_nullable.stderr
error[E0277]: cannot deserialize a value of the database type `diesel::sql_types::Nullable<Bool>` as `bool`
  --> tests/fail/eq_any_is_nullable.rs:18:15
   |
18 |         .load(&mut conn)
   |          ---- ^^^^^^^^^ the trait `FromSql<diesel::sql_types::Nullable<Bool>, Pg>` is not implemented for `bool`, which is required by `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::grouped::Grouped<In<columns::name, Many<diesel::sql_types::Nullable<diesel::sql_types::Text>, &str>>>>>: LoadQuery<'_, _, _>`
   |          |
   |          required by a bound introduced by this call
   |
   = note: double check your type mappings via the documentation of `diesel::sql_types::Nullable<Bool>`
   = help: the following other types implement trait `FromSql<A, DB>`:
             `bool` implements `FromSql<Bool, Mysql>`
             `bool` implements `FromSql<Bool, Pg>`
             `bool` implements `FromSql<Bool, Sqlite>`
   = note: required for `bool` to implement `Queryable<diesel::sql_types::Nullable<Bool>, Pg>`
   = note: required for `bool` to implement `FromSqlRow<diesel::sql_types::Nullable<Bool>, Pg>`
   = note: required for `diesel::sql_types::Nullable<Bool>` to implement `load_dsl::private::CompatibleType<bool, Pg>`
   = note: required for `SelectStatement<FromClause<users::table>, diesel::query_builder::select_clause::SelectClause<diesel::expression::grouped::Grouped<In<columns::name, Many<diesel::sql_types::Nullable<diesel::sql_types::Text>, &str>>>>>` to implement `LoadQuery<'_, diesel::PgConnection, bool>`
note: required by a bound in `diesel::RunQueryDsl::load`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
   |        ---- required by a bound in this associated function
   |     where
   |         Self: LoadQuery<'query, Conn, U>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
